# tauri-plugin-serialport

./: .gitignore  .prettierignore  Cargo.toml  README.md  build.rs  package.json  rollup.config.js  tsconfig.json
.github/: dependabot.yml
.github/workflows/: build_ts.yml  rust.yml
dist-js/: index.d.ts  index.js
guest-js/: index.ts
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: command.rs  error.rs  lib.rs  state.rs
webview-dist/: index.d.ts  index.js
webview-src/: index.ts
