[package]
name = "tauri-plugin-serialport"
version = "0.0.5"
authors = [ "lzhida","eleroy" ]
description = "A tauri plugin developed based on Serialport."
edition = "2021"
rust-version = "1.70"
exclude = ["/examples", "/webview-dist", "/webview-src", "node_modules"]
links = "tauri-plugin-serialport"

[build-dependencies]
tauri-plugin = {version = "2.0.0-beta", features = [ "build" ] }
tauri-build = "2.0.0-beta"

[dependencies]
thiserror = "1.0"
tauri = { version = "2.0.0-beta", features = [] }
serde = "1.0.192"
serialport = "4.3.0"
