[package]
name = "tauri-plugin-serialport"
version = "2.1.6"
authors = [ "lzhida","eleroy" ]
description = "A tauri plugin developed based on Serialport."
edition = "2021"
rust-version = "1.75"
license = "MIT"
links = "tauri-plugin-serialport"

[build-dependencies]
tauri-plugin = {version = "2", features = [ "build" ] }
tauri-build = "2"

[dependencies]
thiserror = "1"
serde_json = "1"
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serialport = {version="4.8.0", features=["serde"]}
